# iceberg-ivm

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  LEARNING_GUIDE.md  README.md  TESTS_GUIDE.md  config.yaml  config.yaml.example  pyproject.toml  state.db
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-04-quickstart-design.md
quickstart/: README.md  config.yaml  docker-compose.yml  views.yaml
quickstart/seed/: Dockerfile  seed.py
quickstart/trino-config/: init-iceberg-catalog.sql
scripts/: seed_data.py
src/iceberg_ivm/: cli.py  config.py  detector.py  executor.py  introspect.py  query_history.py  query_parser.py  server.py
src/iceberg_ivm/static/: index.html
src/trino_mv_orchestrator/: cli.py  config.py  detector.py  executor.py  introspect.py  query_history.py  query_parser.py  server.py  state.py
src/trino_mv_orchestrator/static/: index.html
tests/: docker-compose.yml  seed_data.py
tests/integration/: _driver.py  _oracle.py  conftest.py  test_chained_mv.py  test_cross_partition_groupby.py  test_refresh.py  test_streaming_refresh.py
tests/trino-config/: iceberg.properties
tests/unit/: test_cli.py  test_config.py  test_detector.py  test_executor.py  test_introspect.py  test_query_history.py  test_query_parser.py  test_server.py  test_state.py  test_state_db_resolution.py
