[project]
name = "iceberg-ivm"
dynamic = ["version"]
description = "Incremental view maintenance for Iceberg tables on Trino"
readme = "README.md"
authors = [
    { name = "Jonas Brami", email = "jonasbrami@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiotrino",
    "aiosqlite>=0.19",
    "pyyaml",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "prometheus-client>=0.25.0",
    "sqlparse>=0.4",
]

[project.scripts]
iceberg-ivm = "iceberg_ivm.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from git tags: `v0.1.1` → `0.1.1`. Between tags,
# installs produce a dev version (e.g. `0.1.2.dev3+g7817deb`). In Docker
# builds (no `.git` in context) the publish workflow passes the tag via
# SETUPTOOLS_SCM_PRETEND_VERSION_FOR_ICEBERG_IVM.
[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a running Trino instance",
]
addopts = "-n auto --dist loadgroup"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist>=3.8.0",
]
